--- a/style.css
+++ b/style.css
@@ -58,6 +58,54 @@ h1, h2, h3 {
   background-color: #d62828;
 }
 
+/* Navbar */
+.navbar {
+  background-color: #333;
+  color: #fff;
+  padding: 1rem;
+}
+
+.navbar nav ul {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar nav ul li {
+  margin: 0 1rem;
+}
+
+.navbar nav ul li a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 1.1rem;
+  transition: color 0.3s;
+}
+
+.navbar nav ul li a:hover {
+  color: #e63946;
+}
+
+/* Responsive Navbar */
+@media (max-width: 768px) {
+  .navbar nav ul {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .navbar nav ul li {
+    margin: 0.5rem 0;
+  }
+}
+
+.navbar nav ul li a.active {
+  color: #e63946;
+  font-weight: bold;
+}
+
+
 /* Qui som */
 .qui-som {
   padding: 2rem 1rem;
